@startuml name
!theme plain
hide circle
skinparam linetype ortho
skinparam shadowing false

skinparam class {
    BackgroundColor White
    ArrowColor #003B73
    BorderColor #003B73
}

entity "Usuarios" as usuarios {
  * id_login : VARCHAR(20) <<PK>>
  --
  senha : VARCHAR(100)
  nome : VARCHAR(50)
  cargo : VARCHAR(30)
  nivel_acesso : INT
}

entity "Maquina" as maquina {
  * id : INT <<PK>>
  --
  nome : VARCHAR(50)
  meta : INT
  ciclo_segundos : INT
  status : VARCHAR(20)
}

entity "Turno" as turno {
  * id : INT <<PK>>
  --
  * maquina_id : INT <<FK>>
  hora_inicio : DATETIME
  hora_fim : DATETIME
  producao_ok : INT
  refugo : INT
  downtime_segundos : INT
  oee_percentual : DECIMAL(5,2)
  turno_ativo : BOOLEAN
}

entity "Historico_Logs" as logs {
  * id : INT <<PK>>
  --
  * turno_id : INT <<FK>>
  data_hora : DATETIME
  evento : VARCHAR(255)
  tipo : VARCHAR(20)
  usuario_nome : VARCHAR(50)
  usuario_cargo : VARCHAR(30)
}

' Relacionamentos (1:N)
maquina ||--o{ turno : "possui >"
turno ||--o{ logs : "registra >"

' Relacionamentos do Usuário
usuarios ||--o{ turno : "abre/fecha >"
usuarios ||--o{ logs : "gera >"

@enduml